# tm-llm-book

./: .gitignore  README.md  conftest.py  justfile  pyproject.toml
benchmarks/rag101_triage_benchmark/: .gitignore  __init__.py  fbin.py  playground.py  repl.py
compose/: opensearch.compose.yml  opensearch.yml  pgvector.compose.yml  qdrant.compose.yaml  qdrant.compose.yml
core/: document_loads.py  graph.py  langchain_rag.py  local_mcp.py  playground.py  rfc_proto.py  search_records.py
core/lib/: env_config.py  infra_minio.py
core/rag/: interfaces.py  multiagent_search.py  query_context.py  search_records.py  ui.py
lib/: interfaces.py  vtt_converter.py
pipelines/: answer_with_tools.py  playground.py  prompt_server.py  sst-converter.py  sst-converter.v2.py  text-summarizer.py
pipelines/discord_chat_analyzer/: infra.py  llm.py
pipelines/draft/: text_summarizer.py
pipelines/rag/: multiagent_search.py  search_records.py  ui.py
scripts/: document_loads.py  graph.py  infra_minio.py  langchain_rag.py  local_mcp.py  playground.py  prompt_server.py
services/ai_research/: prompt_server.py
services/microsoft_mcp/: mcp.json  prompt_server.py  pyproject.toml
services/simple_mcp/: main.py  pyproject.toml
services/simple_rag/: README.md  main.py  pyproject.toml
services/simple_rag/tests/: test_db.py
youtube-summarizer/: README.md  main.py
