[project]
name = "langchain-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "ipython>=9.5.0",
  "langchain>=0.3.27",
  "langchain-community>=0.3.29",
  "langchain-openai>=0.3.33",
  "langgraph>=0.6.6",
  "unstructured>=0.18.15",
  "llama-cpp-python>=0.3.16",
  #
  "gradio>=5.44.1",
  #
  "httpx>=0.28.1",
  "qdrant-client>=1.15.1",
  "sentence-transformers>=5.1.0",
  #
  "asyncio>=4.0.0",
  "anyio>=4.9.0",
  "textblob>=0.19.0",
  "markdown>=3.9",
  "lmstudio>=1.5.0",
  "langchain-qdrant>=0.2.1",
  # scripts
  "aioboto3>=15.4.0",
  "minio>=7.2.18",
  "progressbar2>=4.5.0",
  "tqdm>=4.67.1",
  "streamlit>=1.51.0",
]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[dependency-groups]
shared = ["fastmcp", "mcp[cli]"]
dev = ["aiosqlite>=0.21", "httpx>=0.28"]
test = [
  "pytest>=8.3",
  "hypothesis>=6.130.2",
  "httpx>=0.28.1",
  "coverage",
  "pytest",
  "pytest-asyncio",
  "pytest-anyio",
  "pytest-xdist",
  "pytest-mock",
  "pytest-cov",
  "pytest-sugar",
  "pytest-sqlalchemy>=0.2.1",
  "pytest-databases[redis]>=0.1.0",
  "pytest-timeout>=2.3.1",
  "tabulate>=0.9.0",
]

[tool.uv]
default-groups = "all"

[tool.ruff]
line-length = 120
fix = true
lint.fixable = ["ALL"]
lint.ignore = [
  "E402",
]
src = ["libs/**/*", "services/**/*"]
target-version = "py312"
extend-exclude = ["**/migrations"]

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"

timeout = 60
testpaths = ["**/tests"]
addopts = ["-ra", "--ignore", "migrations"]
filterwarnings = [
  "ignore::DeprecationWarning:pkg_resources",
  "ignore::DeprecationWarning:google.*",
  "ignore::DeprecationWarning:passlib.*",
  "ignore::DeprecationWarning:aiosql.*",
  "ignore::DeprecationWarning:litestar.constants.*",
  "ignore::DeprecationWarning:litestar.utils.*",
  "ignore::DeprecationWarning:litestar.cli.*",
  "ignore::DeprecationWarning:httpx._client",
]
