[project]
name = "langchain-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "ipython>=9.5.0",
  "langchain>=0.3.27",
  "langchain-community>=0.3.29",
  "langchain-openai>=0.3.33",
  "langchain-qdrant>=0.2.1",
  "langgraph>=0.6.6",
  "unstructured>=0.18.15",
  "llama-cpp-python>=0.3.16",
  "fastmcp",
  "mcp[cli]",
  #
  "streamlit>=1.51.0",
  "gradio>=5.44.1",
  #
  "httpx>=0.28.1",
  "qdrant-client>=1.15.1",
  "sentence-transformers>=5.1.0",
  #
  "asyncio>=4.0.0",
  "anyio>=4.9.0",
  "textblob>=0.19.0",
  "markdown>=3.9",
  "lmstudio>=1.5.0",
  #
  "aioboto3>=15.4.0",
  "minio>=7.2.18",
  "progressbar2>=4.5.0",
  "tqdm>=4.67.1",
  "tabulate>=0.9.0",
  "psycopg[binary]>=3.3.2",
  "elasticsearch[async]>=9.2.0",
  "opensearch-py>=3.1.0",
]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[dependency-groups]
dev = ["aiosqlite>=0.21"]
test = [
  "pytest>=8.3",
  "hypothesis>=6.130.2",
  "coverage",
  "pytest",
  "pytest-asyncio",
  "pytest-anyio",
  "pytest-xdist",
  "pytest-mock",
  "pytest-cov",
  "pytest-sugar",
  "pytest-sqlalchemy>=0.2.1",
  "pytest-databases[redis]>=0.1.0",
  "pytest-timeout>=2.3.1",
]
linting = [
    "mypy>=1.18.2",
]

[tool.uv]
default-groups = "all"

[tool.ruff]
line-length = 120
fix = true
lint.fixable = ["ALL"]
lint.ignore = [
  "E402",
]
src = ["core/**/*"]
target-version = "py312"

format.line-ending = "auto"

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"

timeout = 60
testpaths = ["**/tests"]
addopts = ["-ra", "--ignore", "migrations"]
filterwarnings = [
  "ignore::DeprecationWarning:pkg_resources",
  "ignore::DeprecationWarning:google.*",
  "ignore::DeprecationWarning:passlib.*",
  "ignore::DeprecationWarning:aiosql.*",
  "ignore::DeprecationWarning:httpx._client",
]

[tool.mypy]
python_version = "3.12"

# Strict checks configuration
strict = true
warn_unreachable = true
warn_unused_ignores = true
# warn_return_any = true # Uncomment if you want to be warned about functions returning Any
# warn_redundant_casts = true # Uncomment if you want to be warned about redundant casts
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
# disallow_any_generics = true # Uncomment for stricter generics checks

# How to handle imports
ignore_missing_imports = true # Often needed for third-party libraries without stubs
follow_imports = "silent" # 'normal', 'skip', 'error' are other options

# Pretty output
pretty = true

# Exclude common directories
exclude = ["venv", ".venv", "build", "dist"]
